Updated counter section styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -117,6 +117,7 @@ a{
     color: #4E47FF;
     padding: 0px;
     margin: 0px;
+    font-family:inter;
 }
 .counter-description{
     font-size: 20px;
